--- a/domain.html
+++ b/domain.html
@@ -2,3 +2,4 @@
  <div align="center"><strong><font face="Courier New, Courier, monospace">Welcome to your first page, powered by VipDomaine.net</font></strong><br>
 <a href=https://www.vipdomaine.net><img src=hebergement-web.jpg border=0></a> </div>
 </body>
+mail fih engagement vision w adresss wPourquoi faire appel à nous /page nos clients tetbadel / footer tetbadel / revoyer nos services / qu en pensent nos clients
